--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,8 @@
     }
     .linha .text h2,
     .sobreNos .text h2,
-    .servicos .text h2{
+    .servicos .text h2,
+    .comments h2{
         font-size: calc(2rem + .1vw);
         font-family: "Poppins", sans-serif;
         font-weight: 700;
@@ -103,14 +104,17 @@
     }
     .sobreNos .image .deco{
         background-color: #CCF4E6;
+        width: 20rem;
+        height: 3rem;
     }
     .sobreNos .image img{
         width: 30rem;
     }
     .sobreNos .text{
-        margin-top: 1rem
+        margin-top: 2.5rem
     }
-    .servicos{
+    .servicos,
+    .comments{
         margin-top: 10rem;
         display: flex;
         align-items: center;
@@ -137,6 +141,8 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+        box-shadow: 0px 0px 15px -5px;
+        border-bottom: 5px solid #69B99D;
     }
     .servicos .line .box img{
         width: 4,5rem;
@@ -146,6 +152,49 @@
         font-size: calc(2vw + .5rem);
         font-family: "Poppins", sans-serif;
         font-weight: 700;
+        font-style: normal;
+    }
+    .comments{
+        margin-top: 10rem;
+    }
+    .comments h2{
+        text-align: center;
+    }
+    .comments .com{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 70rem;
+    }
+    .comments .com .box{
+        box-shadow: 0px 0px 15px -5px;
+        margin-top: 5rem;
+        padding: 2rem;
+        width: 33rem;
+        height: 15rem;
+    }
+    .comments .com .box .user{
+        display: flex;
+        align-items: center;
+        margin-top: 1.5rem;
+    }
+    .comments .com .box .user img{
+        border-radius: 100%;
+    }
+    .comments .com .box .user p{
+        display: flex;
+        margin-left: 1rem;
+        align-items: center;
+        color: #767676;
+        font-family: "DM Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: normal;
+        font-style: normal;
+    }
+    .comments .com .box p{
+        font-family: "DM Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: normal;
         font-style: normal;
     }
     }
