--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,15 @@
     header .options ul{
         display: flex;
         margin-right: 4rem;
+        height: 4rem;
+        align-items: center;
     }
     header .options ul li{
         list-style: none;
         margin: 0rem 1rem 0rem 1rem;
+        height: 4rem;
+        display: flex;
+        align-items: center;
     }
     header .options ul li a{
         text-decoration: none;
@@ -36,6 +41,13 @@
         font-optical-sizing: auto;
         font-weight: 600;
         font-style: normal;
+        padding-bottom: 1.2rem;
+        margin-top: 1.3rem;
+    }
+    header .options ul li:hover a{
+        transition: .15s;
+        border-bottom: 2px solid #69B99D;
+        color: #69B99D;
     }
     header .logo{
         margin-left: 6rem;
@@ -75,17 +87,21 @@
         font-style: normal;
         margin: 1rem 0rem 2rem 0rem;
     }
-    .linha .text button{
+    button{
         background-color: #69B99D;
         border-radius: 5px;
         border: none;
-        width: 10rem;
+        width: 13rem;
         height: 3rem;
         display: flex;
         justify-content: center;
         align-items: center;
         color: #fff;
         font-weight: bolder;
+    }
+    button:hover{
+        transition: 0.15s;
+        border: 3px solid #668c8c;
     }
     .linha .image{
         margin: 5rem 0rem 5rem 0rem;
@@ -196,5 +212,26 @@
         font-optical-sizing: auto;
         font-weight: normal;
         font-style: normal;
+    }
+    .comments .treeDots{
+        display: flex;
+        justify-content: center;
+        margin-top: 4rem;
+    }
+    .comments .treeDots .dot{
+        background-color: #E4E4E4;
+        border-radius: 100%;
+        height: 1rem;
+        width: 1rem;
+        margin: 0.3rem;
+    }
+    .comments .treeDots .dot:hover{
+        background-color: #69B99D;
+    }
+    .contato .text button p{
+        margin-left: 1rem;
+    }
+    .contato .text button span{
+        font-size: large;
     }
     }
