--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,55 @@
-
+header{
+    border-bottom: 1px solid #E4E4E4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
+}
+header .logo h3{
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1.5rem;
+}
+header .logo h3 span{
+    color: #69B99D;
+}
+header .options{
+    display: none;
+}
+.linha .text h2,
+.sobreNos .text h2,
+.servicos .text h2,
+.comments h2,
+.contato .text h2,
+.footer .text h2{
+    font-size: calc(2rem + .1vw);
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+.linha .text p,
+.sobreNos .text p,
+.servicos .text p,
+.servicos .line .box p,
+.contato .ctt p,
+.contato .text p,
+.footer text p{
+    color: #767676;
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
+    margin: 1rem 0rem 2rem 0rem;
+}
+footer{
+    background-color: #69B99D;
+}
+.footer .icons span{
+    color: #fff;
+    font-size: larger;
+    margin: 1rem;
+}
 
 @media screen and (min-width: 600px){
     *{
@@ -14,13 +65,6 @@
         display: flex;
         flex-direction: column;
         width: 75rem;
-    }
-    header{
-        border-bottom: 1px solid #E4E4E4;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 4rem;
     }
     header .options ul{
         display: flex;
@@ -53,40 +97,11 @@
     header .logo{
         margin-left: 6rem;
     }
-    header .logo h3{
-        font-family: "Poppins", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-        font-size: 1.5rem;
-    }
-    header .logo h3 span{
-        color: #69B99D;
-    }
     .linha{
         display: flex;
         justify-content: space-around;
         align-items: center;
         margin-bottom: 10rem;
-    }
-    .linha .text h2,
-    .sobreNos .text h2,
-    .servicos .text h2,
-    .comments h2{
-        font-size: calc(2rem + .1vw);
-        font-family: "Poppins", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-    }
-    .linha .text p,
-    .sobreNos .text p,
-    .servicos .text p,
-    .servicos .line .box p{
-        color: #767676;
-        font-family: "DM Sans", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: normal;
-        font-style: normal;
-        margin: 1rem 0rem 2rem 0rem;
     }
     button{
         background-color: #69B99D;
@@ -230,9 +245,49 @@
         background-color: #69B99D;
     }
     .contato .text button p{
-        margin-left: 1rem;
+        margin: 0.5rem 0rem 0rem 1rem;
+        color: #fff;
     }
     .contato .text button span{
         font-size: large;                                                                                    
+    }
+    .contato .ctt p span{
+        text-align: center;
+        color: #69B99D;
+        margin-right: 1rem;
+        font-size: large;
+    }
+    .contato{
+        display: flex;
+        justify-content: space-between;
+    }
+    .contato .text{
+        margin: 5rem;
+    }
+    .contato .ctt{
+        margin: 8rem 15rem 5rem 5rem;
+    }
+    .footer{
+        display: flex;
+        justify-content: space-between;
+        height: 12rem;
+        align-items: center;
+    }
+    .footer .text{
+        height: 9rem;
+        margin: 1rem 0rem 1rem 5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .footer .text h2 span{
+        color: #fff;
+    }
+    .footer .text p{
+        color: #fff;
+    }
+    .footer .icons{
+        margin-right: 5rem;
+        color: #fff;
     }
     }
