--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?7aqpt');
-  src:  url('../fonts/icomoon.eot?7aqpt#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?7aqpt') format('truetype'),
-    url('../fonts/icomoon.woff?7aqpt') format('woff'),
-    url('../fonts/icomoon.svg?7aqpt#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?sh4kjm');
+  src:  url('../fonts/icomoon.eot?sh4kjm#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?sh4kjm') format('truetype'),
+    url('../fonts/icomoon.woff?sh4kjm') format('woff'),
+    url('../fonts/icomoon.svg?sh4kjm#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -39,6 +39,9 @@
 }
 .icon-phone:before {
   content: "\e903";
+}
+.icon-menu:before {
+  content: "\e9bd";
 }
 .icon-instagram:before {
   content: "\ea92";
