--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,24 @@ header .logo h3 span{
 header .options{
     display: none;
 }
+header .menu{
+    display: flex;
+    margin-right: 1rem;
+}
+header .menu a{
+    text-decoration: none;
+    color: #69B99D;
+    font-size: larger;
+}
+header .menu a span{
+    color: #69B99D;
+}
 .linha .text h2,
 .sobreNos .text h2,
 .servicos .text h2,
 .comments h2,
 .contato .text h2,
-.footer .text h2{
+footer .footer .text h2{
     font-size: calc(2rem + .1vw);
     font-family: "Poppins", sans-serif;
     font-weight: 700;
@@ -30,11 +42,9 @@ header .options{
 }
 .linha .text p,
 .sobreNos .text p,
-.servicos .text p,
-.servicos .line .box p,
 .contato .ctt p,
 .contato .text p,
-.footer text p{
+.footer .text p{
     color: #767676;
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
@@ -42,13 +52,156 @@ header .options{
     font-style: normal;
     margin: 1rem 0rem 2rem 0rem;
 }
-footer{
+.servicos .text p,
+.servicos .line .box p{
+    color: #000;
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
+    margin: 1rem 0rem 2rem 0rem;
+}
+.servicos .line .box p{
+    width: 18rem;
+}
+.linha{
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 10rem;
+    margin-top: 3rem;
+}
+.linha .text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+button{
     background-color: #69B99D;
+    border-radius: 5px;
+    border: none;
+    width: 13rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-weight: bolder;
+}
+button:hover{
+    transition: 0.15s;
+    border: 3px solid #668c8c;
+}
+.linha .image img{
+    width: 24rem;
+}
+.sobreNos, .servicos, .comments{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+}
+.sobreNos .text{
+    text-align: start;
+}
+br{
+    display: none;
+}
+.sobreNos .image img{
+    width: 24rem;
+}
+.servicos .text p span{
+    color: #69B99D;
+}
+.servicos .line{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 62rem;
+}
+.servicos .line .box{
+    text-align: center;
+    width: 20rem;
+    height: 19rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0px 0px 15px -5px;
+    border-bottom: 5px solid #69B99D;
+}
+.comments .treeDots{
+    display: flex;
+    justify-content: center;
+    margin-top: 4rem;
+}
+.comments .treeDots .dot{
+    background-color: #E4E4E4;
+    border-radius: 100%;
+    height: 1rem;
+    width: 1rem;
+    margin: 0.3rem;
+}
+.comments .treeDots .dot:hover{
+    background-color: #69B99D;
+}
+.contato .text h2{
+    margin-right: 2rem;
+}
+.contato .text p{
+    margin-right: 2rem;
+}
+.contato .text button{
+    display: flex;
+    align-items: center;
+}
+.contato .text button p{
+    margin: 0rem 0rem 0rem 1rem;
+    color: #fff;
+}
+.contato .text button span{
+    font-size: large;                                                                                    
+}
+.contato .ctt{
+    margin: 3rem 0rem 3rem 0rem;
+}
+.contato .ctt p span{
+    text-align: center;
+    color: #69B99D;
+    margin-right: 1rem;
+    font-size: large;
+}
+footer{
+    background-color: #69B99D
 }
 .footer .icons span{
     color: #fff;
     font-size: larger;
-    margin: 1rem;
+    margin: 0rem 1rem 0rem 0rem;
+}
+.footer .icons{
+    margin-bottom: 2rem;
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 20rem;
+    padding-left: 1rem;
+}
+.footer .text{
+    height: 9rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.footer .text h2 span{
+    color: #fff;
+}
+.footer .text p{
+    color: #fff;
 }
 
 @media screen and (min-width: 600px){
@@ -56,6 +209,9 @@ footer{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+    }
+    br{
+        display: flex;
     }
     body{
         display: flex;
@@ -65,6 +221,14 @@ footer{
         display: flex;
         flex-direction: column;
         width: 75rem;
+    }
+    header .menu{
+        display: none;
+    }
+    header .options{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     header .options ul{
         display: flex;
@@ -99,25 +263,10 @@ footer{
     }
     .linha{
         display: flex;
+        flex-direction: row;
         justify-content: space-around;
         align-items: center;
         margin-bottom: 10rem;
-    }
-    button{
-        background-color: #69B99D;
-        border-radius: 5px;
-        border: none;
-        width: 13rem;
-        height: 3rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #fff;
-        font-weight: bolder;
-    }
-    button:hover{
-        transition: 0.15s;
-        border: 3px solid #668c8c;
     }
     .linha .image{
         margin: 5rem 0rem 5rem 0rem;
@@ -127,6 +276,7 @@ footer{
     }
     .sobreNos{
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         margin-top: 10rem;
         margin-bottom: 10rem;
@@ -157,24 +307,16 @@ footer{
     .servicos .text{
         text-align: center;
     }
-    .servicos .text p span{
-        color: #CCF4E6;
-    }
     .servicos .line{
         display: flex;
         justify-content: space-between;
         width: 60rem;
+        flex-direction: row;
+        align-items: center;
+        height: auto;
     }
     .servicos .line .box{
-        text-align: center;
-        width: 18rem;
-        height: 19rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        box-shadow: 0px 0px 15px -5px;
-        border-bottom: 5px solid #69B99D;
+        width: 19rem;
     }
     .servicos .line .box img{
         width: 4,5rem;
@@ -229,33 +371,8 @@ footer{
         font-weight: normal;
         font-style: normal;
     }
-    .comments .treeDots{
-        display: flex;
-        justify-content: center;
-        margin-top: 4rem;
-    }
-    .comments .treeDots .dot{
-        background-color: #E4E4E4;
-        border-radius: 100%;
-        height: 1rem;
-        width: 1rem;
-        margin: 0.3rem;
-    }
-    .comments .treeDots .dot:hover{
-        background-color: #69B99D;
-    }
-    .contato .text button p{
-        margin: 0.5rem 0rem 0rem 1rem;
-        color: #fff;
-    }
     .contato .text button span{
         font-size: large;                                                                                    
-    }
-    .contato .ctt p span{
-        text-align: center;
-        color: #69B99D;
-        margin-right: 1rem;
-        font-size: large;
     }
     .contato{
         display: flex;
@@ -267,8 +384,15 @@ footer{
     .contato .ctt{
         margin: 8rem 15rem 5rem 5rem;
     }
+    .contato .ctt p span{
+        text-align: center;
+        color: #69B99D;
+        margin-right: 1rem;
+        font-size: large;
+    }
     .footer{
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         height: 12rem;
         align-items: center;
@@ -280,14 +404,8 @@ footer{
         flex-direction: column;
         justify-content: space-evenly;
     }
-    .footer .text h2 span{
-        color: #fff;
-    }
-    .footer .text p{
-        color: #fff;
-    }
     .footer .icons{
-        margin-right: 5rem;
+        margin: 2rem 5rem 0rem 0rem;
         color: #fff;
     }
     }
