--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,10 @@ footer{
         margin-bottom: 10rem;
         flex-direction: column;
     }
+    .comments .com .box2{
+        display: flex;
+        flex-direction: column;
+    }
     .servicos .text{
         text-align: center;
     }
