--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?sh4kjm');
-  src:  url('../fonts/icomoon.eot?sh4kjm#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?sh4kjm') format('truetype'),
-    url('../fonts/icomoon.woff?sh4kjm') format('woff'),
-    url('../fonts/icomoon.svg?sh4kjm#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?o2q9uz');
+  src:  url('../fonts/icomoon.eot?o2q9uz#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?o2q9uz') format('truetype'),
+    url('../fonts/icomoon.woff?o2q9uz') format('woff'),
+    url('../fonts/icomoon.svg?o2q9uz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,27 +25,39 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-mail_outline:before {
+.icon-phone:before {
+  content: "\e907";
+}
+.icon-close:before {
   content: "\e900";
 }
-.icon-youtube:before {
-  content: "\e904";
-}
-.icon-facebook:before {
+.icon-cosmetic:before {
   content: "\e901";
 }
-.icon-map-pin:before {
+.icon-facebook:before {
   content: "\e902";
 }
-.icon-phone:before {
+.icon-instagram:before {
   content: "\e903";
 }
-.icon-menu:before {
-  content: "\e9bd";
+.icon-mail:before {
+  content: "\e904";
 }
-.icon-instagram:before {
-  content: "\ea92";
+.icon-map-pin:before {
+  content: "\e905";
+}
+.icon-menu:before {
+  content: "\e906";
+}
+.icon-trim:before {
+  content: "\e908";
 }
 .icon-whatsapp:before {
-  content: "\ea93";
+  content: "\e909";
+}
+.icon-woman-hair:before {
+  content: "\e90a";
+}
+.icon-youtube:before {
+  content: "\e90b";
 }
