--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ footer .footer .text h2{
     font-optical-sizing: auto;
     font-weight: normal;
     font-style: normal;
-    margin: 1rem 0rem 2rem 0rem;
+    margin: 1rem 0rem 1rem 0rem;
 }
 .servicos .line .box p{
     width: 18rem;
@@ -132,6 +132,12 @@ br{
     align-items: center;
     box-shadow: 0px 0px 15px -5px;
     border-bottom: 5px solid #69B99D;
+    padding-top: 1rem;
+}
+.servicos .line .box span{
+    font-size: 5rem;
+    color: #69B99D;
+    margin-top: rem;
 }
 .comments .com{
     display: flex;
